2006-01-26  Andrew Cagney  <cagney@redhat.com>

	* src/widgets/ftkconsole.c (ftk_console_new): Delete <<i>>,
	unused.
	(ftk_console_append_text_e): Return TRUE.
	* src/widgets/ftkstripchart.c (ftk_stripchart_configure): Delete
	<<ds>>, unused.
	(ftk_stripchart_expose): Delete <<d_this>>, unsed.
	(ftk_stripchart_new): Delete <<i>>, unused.
	(ftk_stripchart_expose): Cast tv_usec.
	* Makefile.am (AM_CFLAGS): Replace CFLAGS, add -Werror and -Wall.
	(libftkjni_a_SOURCES, noinst_LIBRARIES, libftkjni_so_SOURCES) 
	(libftkjni.so, libftk_a_SOURCES, noinst_LIBRARIES)
	(libftk_so_SOURCES, libftk.so): Define.
	(.a.so): New rule.

2006-01-14  Diego Novillo  <dnovillo@redhat.com>

	* Makefile.am (CFLAGS): Add -fPIC -DPIC -std=gnu99.
	(ftkstripchart.o, ftkconsole.o): Use.
	(Stripchart.o): Add -fPIC.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* Directory moved from frysk-imports/ to frysk-gtk/.

2005-12-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (libftk_SOURCES): Define.
	(libftkjava_SOURCES, libftkjni_SOURCES): Define.

2005-12-13  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (solibdir, solib_PROGRAMS): Define, have the .so
	files installed into $(libdir).
	(tlwidgetsdst): Eliminate.
	(javadir, java_DATA): Define, have the .jar file installed into
	$(datadir)/java.

2005-12-12  Chris Moller  <moller@mollerware.com>

	* TODO: Added new file.

2005-12-09  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (ftkconsole.o, ftkstripchart.o): Pass
	FRYSK_IMPORTS_CFLAGS to CC, not FRYSK_IMPORTS_LIBS, or output from
	pkg-config.

	* Makefile.am: Use FRYSK_IMPORTS_LIBS, FRYSK_IMPORTS_CFLAGS, and
	FRYSK_IMPORTS_CLASSPATH throughout.

2005-12-09  Chris Moller  <moller@mollerware.com>

	* src/widgets/ftkstripchart.c: Added tests to check if the widget
	is mapped before drawing it.

2005-12-08  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Replace references to /opt/frysk with corresponding
	makefile macros.

2005-12-05  Chris Moller  <moller@mollerware.com>
